Updated style.css and index.html - cleaned and added accent color, and changed "hand-lettered" to "hand-crafted" in hero section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- HERO SECTION -->
   <main class="hero">
     <h1>Cherished Calligraphy</h1>
-    <p class="tagline">Hand-lettered calligraphy for life’s special moments.</p>
+    <p class="tagline">Hand-crafted calligraphy for life’s special moments.</p>
   </main>
 
   <!-- Footer (Loaded via Partial) -->
