Updated portfolio pictures and stylized success page, connected form to Formspree

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
         <div class="about-text">
           <p>
             Hi, I'm Mirabelle — the calligrapher behind Cherished Calligraphy.
-            I specialize in hand-lettering for weddings, events, and life's special moments.
+            I specialize in hand-lettering for weddings, brand activations, corporate events, and life's special moments.
           </p>
 
           <p>
