--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
   <!-- HERO SECTION -->
   <main class="hero">
-    <h1>Cherished Calligraphy</h1>
-    <p class="tagline">Hand-crafted calligraphy for life’s special moments.</p>
+    <h1>Calligraphy & Engraving, Elevated</h1>
+    <p class="tagline">Artistry for every celebration.</p>
   </main>
 
   <!-- Footer (Loaded via Partial) -->
