--- a/success.html
+++ b/success.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Message Sent</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Message Sent | Cherished Calligraphy</title>
+
+  <!-- Google Font Montserrat -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- Main CSS -->
+  <link rel="stylesheet" href="css/style.css" />
 </head>
+
 <body>
-  <h1>Thank you!</h1>
-  <p>Your message has been sent successfully.</p>
-  <a href="/">Return Home</a>
-</body>
-</html>
+
+  <!-- Header -->
+  <div data-include="partials/header.html"></div>
+
+  <!-- SUCCESS MESSAGE SECTION -->
+  <section class="contact" style="padding: 6rem 2rem; text-align: center;">
+    <div class="contact-container">
+      <h1 style="color: var(--accent); font-size: 2.4rem; margin-bottom: 1rem;">
+        Thank You!
+      </h1>
+
+      <p style="max-width: 600px; margin: 0 auto 2.5rem; color: #555; font-size: 1.2rem; line-height: 1.7;">
+        Your message has been sent successfully.  
+        I will be in touch within 1–2 business days.
+      </p>
+
+      <a href="/" 
+         class="book-button" 
+         style="margin-top: 2rem; display: inline
