Removed "(TEST)" from Hero Text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <!-- HERO SECTION -->
   <main class="hero">
-    <h1>Calligraphy & Engraving, Elevated (TEST)</h1>
+    <h1>Calligraphy & Engraving, Elevated</h1>
     <p class="tagline">Artistry for every celebration.</p>
   </main>
 
