Updated email in footer, contact page, and footer

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
       <h1>Contact Me</h1>
       <p class="contact-intro">
         Have a question? Want to inquire about a project or event?
-        <br>I’d love to hear from you.
+        <br>I’d love to hear from you.<br>If forms aren't your thing, feel free to send a message to mirabelle@cherishedcalligraphy.com.
       </p>
 
       <!-- Contact Form (Netlify-ready) -->
