Updated note in contact code (Changed Netlify to Formspree) and added header, footer, and return button to success page

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
         <br>I’d love to hear from you.<br>If forms aren't your thing, feel free to send a message to mirabelle@cherishedcalligraphy.com.
       </p>
 
-      <!-- Contact Form (Netlify-ready) -->
+      <!-- Contact Form (Formspree) -->
       <form class="contact-form"
             action="https://formspree.io/f/xgvgzjva"
             method="POST">
