--- a/success.html
+++ b/success.html
@@ -27,10 +27,22 @@
       </h1>
 
       <p style="max-width: 600px; margin: 0 auto 2.5rem; color: #555; font-size: 1.2rem; line-height: 1.7;">
-        Your message has been sent successfully.  
+        Your message has been sent successfully.<br>
         I will be in touch within 1–2 business days.
       </p>
 
-      <a href="/" 
-         class="book-button" 
-         style="margin-top: 2rem; display: inline
+      <a href="/" class="book-button" style="margin-top: 2rem;">
+        Return to Home
+      </a>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <div data-include="partials/footer.html"></div>
+
+  <!-- Scripts -->
+  <script src="js/include.js"></script>
+  <script src="js/menu.js"></script>
+
+</body>
+</html>
