Added privacy & terms page + updated contact form styling

--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,14 @@
 
         <button type="submit">Send Message</button>
       </form>
+      
+      <p class="form-legal">
+        This form is protected from spam and processed securely.
+        <br>By submitting, you agree to the 
+        <a href="/policies.html">Privacy Policy</a> and 
+        <a href="/policies.html">Terms of Service</a>.
+      </p>
+
 
     </div>
   </section>
