Fixed policies links causing 404

--- a/contact.html
+++ b/contact.html
@@ -61,8 +61,8 @@
       <p class="form-legal">
         This form is protected from spam and processed securely.
         <br>By submitting, you agree to the 
-        <a href="/policies.html">Privacy Policy</a> and 
-        <a href="/policies.html">Terms of Service</a>.
+        <a href="./policies.html">Privacy Policy</a> and 
+        <a href="./policies.html">Terms of Service</a>.
       </p>
 
 
