Updated services layout, added real pictures, deleted fillers, modified About page wording

--- a/site/about.html
+++ b/site/about.html
@@ -28,19 +28,20 @@
       <div class="about-content">
         <div class="about-text">
           <p>
-            Hi, I'm Mirabelle — the calligrapher behind Cherished Calligraphy.
-            I specialize in hand-lettering for weddings, brand activations, corporate events, and life's special moments.
+            Hi, I'm Mirabelle, the calligrapher behind Cherished Calligraphy.
+            I specialize in hand-lettering for weddings, brand activations, corporate events, and meaningful celebrations.
           </p>
 
           <p>
-            My goal is to bring warmth, elegance, and personality to every project.
-            Whether it's place cards, signage, engraving, or custom pieces,
-            I pour intention into each stroke.
+            Cherished Calligraphy was created from a love of intentional design and the belief
+            that small details leave a lasting impression. From holiday and place cards to
+            live engraving and custom pieces, every project is approached with care,
+            precision, and a deep respect for the moment it represents.
           </p>
 
           <p>
-            When I'm not creating, you can usually find me exploring new pens,
-            practicing scripts, or walking around Dallas/Fort Worth with a matcha.
+            When I'm not creating, you can usually find me testing new tools,
+            refining scripts, or exploring Dallas/Fort Worth with an oat milk latte in hand.
           </p>
         </div>
 
