--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -23,18 +23,12 @@
       <h1>Portfolio</h1>
 
       <div class="portfolio-grid">
-        <img src="images/p1.jpg" alt="Calligraphy">
-        <img src="images/p2.jpg" alt="Calligraphy">
-        <img src="images/p3.jpg" alt="Calligraphy">
-        <img src="images/p4.jpg" alt="Calligraphy">
-        <img src="images/p5.jpg" alt="Calligraphy">
-        <img src="images/p6.jpg" alt="Calligraphy">
-        <img src="images/p7.jpg" alt="Calligraphy">
-        <img src="images/p8.jpg" alt="Calligraphy">
-        <img src="images/p9.jpg" alt="Calligraphy">
-        <img src="images/p10.jpg" alt="Calligraphy">
-        <img src="images/p11.jpg" alt="Calligraphy">
-        <img src="images/p12.jpg" alt="Calligraphy">
+        <img src="images/p1.jpg" alt="Hand-lettered place card" loading="lazy">
+        <img src="images/p2.jpg" alt="Engraved glassware detail" loading="lazy">
+        <img src="images/p3.jpg" alt="Modern calligraphy on paper" loading="lazy">
+        <img src="images/p4.jpg" alt="Personalized event stationery" loading="lazy">
+        <img src="images/p5.jpg" alt="Luxury calligraphy detail shot" loading="lazy">
+        <img src="images/p6.jpg" alt="Hand-lettered name card" loading="lazy">
       </div>
 
     </div>
