--- a/site/contact.html
+++ b/site/contact.html
@@ -21,7 +21,7 @@
   <div data-include="partials/header.html"></div>
 
   <!-- Netlify build-time form detection -->
-  <form name="contact" netlify hidden>
+  <form name="contact-hidden" netlify hidden>
     <input type="text" name="name">
     <input type="email" name="email">
     <textarea name="message"></textarea>
