--- a/site/contact.html
+++ b/site/contact.html
@@ -14,7 +14,7 @@
 <body>
 
   <!-- Hidden form for Netlify build-time detection -->
-  <form name="contact" netlify hidden>
+  <form name="contact-hidden" netlify hidden>
     <input type="text" name="name">
     <input type="email" name="email">
     <textarea name="message"></textarea>
