--- a/site/contact.html
+++ b/site/contact.html
@@ -5,20 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | Cherished Calligraphy</title>
 
+  <!-- Google Font Montserrat -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- Main CSS -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-
-  <!-- Hidden form for Netlify build-time detection -->
-  <form name="contact-hidden" data-netlify="true" hidden>
-    <input type="text" name="name">
-    <input type="email" name="email">
-    <textarea name="message"></textarea>
-  </form>
 
   <!-- Header -->
   <div data-include="partials/header.html"></div>
@@ -30,7 +26,8 @@
       <h1>Contact Me</h1>
       <p class="contact-intro">
         Have a question? Want to inquire about a project or event?
-        <br>I’d love to hear from you.<br>If forms aren't your thing, feel free to send a message to mirabelle@cherishedcalligraphy.com.
+        <br>I’d love to hear from you.<br>
+        If forms aren't your thing, feel free to send a message to mirabelle@cherishedcalligraphy.com.
       </p>
 
       <!-- Actual Netlify Form -->
@@ -41,10 +38,13 @@
             data-netlify-honeypot="bot-field"
             action="/success.html">
 
+        <!-- Hidden required field -->
         <input type="hidden" name="form-name" value="contact">
 
+        <!-- Honeypot -->
         <p style="display:none;">
-          <label>Don’t fill this out if you’re human:
+          <label>
+            Don’t fill this out if you’re human:
             <input name="bot-field">
           </label>
         </p>
@@ -77,9 +77,19 @@
     </div>
   </section>
 
+  <!-- Footer -->
   <div data-include="partials/footer.html"></div>
 
+  <!-- Scripts -->
   <script src="js/include.js"></script>
   <script src="js/menu.js"></script>
+
+  <!-- Hidden Netlify Detection Form (must come last) -->
+  <form name="contact-hidden" data-netlify="true" hidden>
+    <input type="text" name="name">
+    <input type="email" name="email">
+    <textarea name="message"></textarea>
+  </form>
+
 </body>
 </html>
