Fix Netlify contact form honeypot and markup

--- a/site/contact.html
+++ b/site/contact.html
@@ -5,32 +5,105 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | Cherished Calligraphy</title>
 
-  <!-- Google Font Montserrat -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
-  <!-- Main CSS -->
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
 
-  <!-- Header -->
-  <div data-include="partials/header.html"></div>
+  <!-- HEADER -->
+  <div class="site-header">
+    <div class="nav-container">
+
+      <!-- Mobile Hamburger -->
+      <div class="hamburger" aria-label="Menu">
+        <span></span>
+        <span></span>
+      </div>
+
+      <!-- Logo -->
+      <div class="logo">
+        <a href="index.html">Cherished Calligraphy</a>
+      </div>
+
+      <!-- Desktop Navigation -->
+      <div class="nav-left">
+        <a href="index.html">HOME</a>
+        <a href="about.html">ABOUT</a>
+        <a href="services.html">SERVICES</a>
+        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="contact.html" class="active">CONTACT</a>
+      </div>
+
+      <!-- Mobile Menu -->
+      <div class="mobile-menu">
+        <a href="index.html">HOME</a>
+        <a href="about.html">ABOUT</a>
+        <a href="services.html">SERVICES</a>
+        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="contact.html">CONTACT</a>
+
+        <!-- Instagram (mobile) -->
+        <a href="https://instagram.com/cherished.calligraphy"
+           target="_blank"
+           aria-label="Instagram"
+           class="mobile-ig-icon">
+          <img src="images/ig-icon.svg" alt="Instagram" />
+        </a>
+      </div>
+
+      <!-- Desktop Icons -->
+      <div class="nav-icons">
+        <a href="https://instagram.com/cherished.calligraphy"
+           target="_blank"
+           aria-label="Instagram"
+           class="icon">
+          <svg viewBox="0 0 24 24" fill="currentColor">
+            <path d="M7 2C4.24 2 2 4.24 2 7v10c0 2.76 2.24 5 5 5h10c2.76 
+            0 5-2.24 5-5V7c0-2.76-2.24-5-5-5H7zm0 2h10c1.66 
+            0 3 1.34 3 3v10c0 1.66-1.34 3-3 
+            3H7c-1.66 0-3-1.34-3-3V7c0-1.66 
+            1.34-3 3-3zm11 1.5a1 1 0 110 2 
+            1 1 0 010-2zM12 7a5 5 0 100 10 
+            5 5 0 000-10zm0 2a3 3 0 110 6 
+            3 3 0 010-6z"></path>
+          </svg>
+        </a>
+
+        <a href="mailto:mirabelle@cherishedcalligraphy.com"
+           aria-label="Email"
+           class="icon">
+          <svg viewBox="0 0 24 24" fill="currentColor">
+            <path d="M20 4H4c-1.1 0-2 .9-2 
+            2v12c0 1.1.9 2 2 2h16c1.1 
+            0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 
+            4l-8 5-8-5V6l8 5 8-5v2z"></path>
+          </svg>
+        </a>
+      </div>
+
+    </div>
+  </div>
+
+
 
   <!-- CONTACT SECTION -->
   <section class="contact">
     <div class="contact-container">
 
       <h1>Contact Me</h1>
+
       <p class="contact-intro">
         Have a question? Want to inquire about a project or event?
-        <br>I’d love to hear from you.<br>
-        If forms aren't your thing, feel free to send a message to mirabelle@cherishedcalligraphy.com.
+        <br>I’d love to hear from you.
+        <br>If forms aren't your thing, email
+        <strong>mirabelle@cherishedcalligraphy.com</strong>.
       </p>
 
-      <!-- Actual Netlify Form -->
+      <!-- NETLIFY FORM -->
       <form class="contact-form"
             name="contact"
             method="POST"
@@ -38,29 +111,21 @@
             data-netlify-honeypot="bot-field"
             action="/success.html">
 
-        <!-- Hidden required field -->
         <input type="hidden" name="form-name" value="contact">
 
-        <!-- Honeypot -->
         <p style="display:none;">
-          <label>
-            Don’t fill this out if you’re human:
-            <input name="bot-field">
-          </label>
+          <input name="bot-field">
         </p>
 
-        <label>
-          Name
+        <label>Name
           <input type="text" name="name" required>
         </label>
 
-        <label>
-          Email
+        <label>Email
           <input type="email" name="email" required>
         </label>
 
-        <label>
-          Message
+        <label>Message
           <textarea name="message" rows="5" required></textarea>
         </label>
 
@@ -69,27 +134,26 @@
 
       <p class="form-legal">
         This form is protected from spam and processed securely.
-        <br>By submitting, you agree to the 
-        <a href="./policies.html">Privacy Policy</a> and 
-        <a href="./policies.html">Terms of Service</a>.
+        <br>By submitting, you agree to the
+        <a href="policies.html">Privacy Policy</a> and
+        <a href="policies.html">Terms of Service</a>.
       </p>
 
     </div>
   </section>
 
-  <!-- Footer -->
-  <div data-include="partials/footer.html"></div>
 
-  <!-- Scripts -->
-  <script src="js/include.js"></script>
+
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="footer-content">
+      <p>© 2025 Cherished Calligraphy</p>
+      <p><a href="mailto:mirabelle@cherishedcalligraphy.com">
+        mirabelle@cherishedcalligraphy.com
+      </a></p>
+    </div>
+  </footer>
+
   <script src="js/menu.js"></script>
-
-  <!-- Hidden Netlify Detection Form (must come last) -->
-  <form name="contact-hidden" data-netlify="true" hidden>
-    <input type="text" name="name">
-    <input type="email" name="email">
-    <textarea name="message"></textarea>
-  </form>
-
 </body>
 </html>
