WIP: homepage, about design refinements

--- a/site/about.html
+++ b/site/about.html
@@ -46,8 +46,38 @@
         </div>
 
         <div class="about-photo">
-          <img src="images/about-placeholder.png" alt="Calligraphy workspace">
+          <div class="about-photo-wrapper">
+
+            <svg
+              class="gold-circle"
+              viewBox="0 0 200 200"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M98,12
+                  C148,6 188,48 186,102
+                  C184,154 142,190 96,186
+                  C48,182 10,142 14,96
+                  C18,48 52,16 98,12"
+                fill="none"
+                stroke="#C9B8A8"
+                stroke-width="3.2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
+
+            <img
+              src="images/me.png"
+              alt="Mirabelle Essien"
+              class="about-photo-img"
+            />
+
+          </div>
         </div>
+
+      </div>
+
       </div>
     </div>
   </section>
