--- a/site/index.html
+++ b/site/index.html
@@ -18,11 +18,19 @@
   <!-- Header (Loaded via Partial) -->
   <div id="header-container" data-include="partials/header.html"></div>
 
-  <!-- HERO SECTION -->
-  <main class="hero">
-    <h1>Calligraphy & Engraving, Elevated</h1>
-    <p class="tagline">Artistry for every celebration.</p>
-  </main>
+<!-- HERO SECTION -->
+<section class="hero">
+  <div class="hero-overlay"></div>
+
+  <div class="hero-content">
+    <h1>Calligraphy &amp; Engraving, Elevated</h1>
+    <p>Artistry for every celebration.</p>
+
+    <a href="services.html" class="hero-button">
+      View Services
+    </a>
+  </div>
+</section>
 
   <!-- Footer (Loaded via Partial) -->
   <div data-include="partials/footer.html"></div>
