WIP: homepage services layout exploration

--- a/site/index.html
+++ b/site/index.html
@@ -5,10 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cherished Calligraphy | Dallas Calligrapher and Engraver</title>
 
-  <!-- Google Font Montserrat -->
+  <!-- Google Font Montserrat & Playfair Display-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500&display=swap" rel="stylesheet">
 
   <!-- Main CSS -->
   <link rel="stylesheet" href="css/style.css?v=3.0" />
@@ -26,10 +27,49 @@
     <h1>Calligraphy &amp; Engraving, Elevated</h1>
     <p>Artistry for every celebration.</p>
 
-    <a href="services.html" class="hero-button">
+    <a href="services.html" class="button hero-button">
       View Services
     </a>
   </div>
+</section>
+
+<section class="home-intro">
+  <p class="intro-eyebrow">What I Do</p>
+
+  <h2>
+    Handcrafted calligraphy and engraving for
+    weddings, events, and meaningful celebrations
+  </h2>
+
+  <p class="intro-text">
+    Cherished Calligraphy provides refined, hand-lettered details for
+    intimate gatherings and large-scale events — from custom place cards
+    to live engraving experiences.
+  </p>
+</section>
+
+<section class="home-services">
+  <h2>Services</h2>
+
+  <div class="home-services-grid">
+    <div class="service-item">
+      <h3>Live Events</h3>
+      <p>
+        On-site calligraphy and engraving for weddings,
+        brand activations, and corporate events.
+      </p>
+    </div>
+
+    <div class="service-item">
+      <h3>In-Studio Work</h3>
+      <p>
+        Custom place cards, holiday pieces,
+        keepsakes, and personalized details.
+      </p>
+    </div>
+  </div>
+
+  <a href="services.html" class="button">View Services</a>
 </section>
 
   <!-- Footer (Loaded via Partial) -->
