Home Page Revamp, Font Changes, Added Accent Color

--- a/site/index.html
+++ b/site/index.html
@@ -26,54 +26,54 @@
     <h1>Calligraphy & Engraving, Elevated</h1>
     <p class="tagline">Artistry for every celebration.</p>
 
-    <a href="services.html" class="button hero-button">View Services</a>
   </section>
 
   <!-- HOME EDITORIAL CONTENT -->
   <div class="home-editorial">
 
     <!-- WHAT I DO -->
-    <section class="home-what">
-      <p class="intro-eyebrow">What I Do</p>
-
-      <h2>
-        Handcrafted calligraphy and engraving for
-        meaningful celebrations
-      </h2>
-
-      <div class="home-what-grid">
-        <div>
-          <h3>In-Studio Commissions</h3>
-          <p>
-            Custom place cards, holiday pieces, keepsakes,
-            and handwritten details created with care.
-          </p>
-        </div>
-
-        <div>
-          <h3>On-Site Calligraphy & Engraving</h3>
-          <p>
-            Live personalization for weddings, brand activations,
-            and elevated events.
-          </p>
-        </div>
-      </div>
-
-      <a href="services.html" class="button">View Services</a>
-    </section>
-
-    <!-- ABOUT (ON HOME) -->
-    <section class="home-about">
-      <h2>About</h2>
-
-      <p class="home-about-text">
-        Cherished Calligraphy is led by Mirabelle Essien, a Dallas-based calligrapher
-        specializing in thoughtfully crafted details for weddings, brand activations,
-        and intimate celebrations. Every piece is created with intention, care,
-        and respect for the moment it represents.
+    <section class="section home-about">
+      <p class="home-manifesto">
+        Cherished Calligraphy creates refined, intentional lettering for brands
+        and celebrations where the smallest details matter most.
       </p>
 
-      <a href="contact.html" class="button">Work With Me</a>
+      <p class="home-support">
+        From live event calligraphy to bespoke engraving, each piece is designed
+        to feel personal, thoughtful, and quietly luxurious.
+      </p>
+
+      <p class="home-footnote">
+        Based in Dallas, Texas · Available for travel
+      </p>
+    </section>
+
+
+    <!-- ABOUT (ON HOME) -->
+    <section class="section home-about">
+      <div class="home-about-inner">
+
+        <div class="home-about-photo">
+          <img src="images/me.png" alt="Mirabelle">
+        </div>
+
+        <div class="home-about-text">
+          <h2>Meet Mirabelle</h2>
+
+          <p>
+            Mirabelle is the artist behind Cherished Calligraphy. She is a Dallas-based calligrapher,
+            specializing in thoughtfully crafted details for weddings, brand activations,
+            and intimate celebrations. Every piece is created with intention, care,
+            and respect for the moment it represents.
+          </p>
+
+          <div class="home-about-cta">
+            <a href="contact.html" class="button">Work With Me</a>
+          </div>
+          
+        </div>
+
+      </div>
     </section>
 
     <!-- BRAND ACCENT -->
