--- a/site/services.html
+++ b/site/services.html
@@ -60,7 +60,7 @@
       </div>
       
       <div class="book-button-wrapper">
-        <a href="contact.html" class="book-button">Book Here</a>
+        <a href="contact.html" class="button">Book Here</a>
       </div>
     
     </div>
