Final launch polish, mobile typography, and home about refinement

--- a/site/contact.html
+++ b/site/contact.html
@@ -98,7 +98,7 @@
       <p class="contact-intro">
         Have a question? Want to inquire about a project or event?
         <br>I’d love to hear from you.
-        <br>If forms aren't your thing, email
+        <br>If forms aren't your thing, you can send a message to
         <span class="contact-email">mirabelle@cherishedcalligraphy.com</span>.
       </p>
 
