--- a/site/index.html
+++ b/site/index.html
@@ -27,6 +27,24 @@
     <p class="tagline">Artistry for every celebration.</p>
   </section>
 
+  <section class="service-preview">
+  <a href="portfolio.html" class="service-card">
+    <img src="images/calligraphy.jpg" alt="Traditional Calligraphy">
+    <span class="service-label">Traditional Calligraphy</span>
+  </a>
+
+  <a href="portfolio.html" class="service-card">
+    <img src="images/engrave.jpg" alt="Engraving">
+    <span class="service-label">Engraving</span>
+  </a>
+
+  <a href="portfolio.html" class="service-card">
+    <img src="images/onsite.jpg" alt="Live Events">
+    <span class="service-label">Live Events</span>
+  </a>
+</section>
+
+
   <!-- HOME EDITORIAL CONTENT -->
   <div class="home-editorial">
 
@@ -38,8 +56,8 @@
       </p>
 
       <p class="home-support">
-        From live event calligraphy to bespoke engraving, each piece is designed
-        to feel personal, thoughtful, and quietly luxurious.
+        From live event calligraphy to bespoke engraving, my work is designed
+        to turn special moments into lasting experiences.
       </p>
 
       <p class="home-footnote">
@@ -59,10 +77,16 @@
           <h2>Meet Mirabelle</h2>
 
           <p>
-            Mirabelle is the artist behind Cherished Calligraphy. She is a Dallas-based calligrapher,
-            specializing in thoughtfully crafted details for weddings, brand activations,
-            and intimate celebrations. Every piece is created with intention, care,
-            and respect for the moment it represents.
+            Hey there! I’m Mirabelle, the artist behind Cherished&nbsp;Calligraphy. 
+            I'm a Dallas native and a proud Longhorn (Hook&nbsp;’Em!), and I don’t believe in one-size-fits-all events.
+          </p>
+          <p>
+            Creating by hand is one of the most meaningful ways to connect with people, and I bring that approach to every project, crafting details that feel personal, intentional, and memorable. 
+            Whether working live at a brand activation or a special celebration, I love connecting with guests and bringing each piece to life right before their eyes. 
+          </p>
+
+          <p>
+            Let’s connect and create something memorable for your next event!
           </p>
 
           <div class="home-about-cta">
