SEO polish + responsive fixes (home hero, services, buttons, about iPad)

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,14 @@
 
   <title>Cherished Calligraphy | Dallas Calligrapher & Engraver</title>
 
+  <meta
+    name="description"
+    content="Luxury calligraphy and engraving for events and brands. On-site personalization for celebrations, live events, and brand activations in Dallas, TX and beyond."
+  />
+
+  <!-- Google Search Console verification -->
+   <meta name="google-site-verification" content="1fzGvNzLG1R9qKHq1SHBnnEshpcOCFXFpqj0DUdaP8A" />
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,25 +31,27 @@
 
   <!-- HERO -->
   <section class="hero">
-    <h1>Calligraphy & Engraving, Elevated</h1>
-    <p class="tagline">Artistry for every celebration.</p>
+    <h1>Calligraphy & Engraving</h1>
+    <p class="tagline">Luxury personalization for celebrations, live events, and brand activations in Dallas, TX and beyond.</p>
   </section>
 
   <section class="service-preview">
-  <a href="portfolio.html" class="service-card">
-    <img src="images/calligraphy.jpg" alt="Traditional Calligraphy">
-    <span class="service-label">Traditional Calligraphy</span>
-  </a>
+    <h2>Services</h2>
 
-  <a href="portfolio.html" class="service-card">
-    <img src="images/engrave.jpg" alt="Engraving">
-    <span class="service-label">Engraving</span>
-  </a>
+    <a href="portfolio.html" class="service-card">
+      <img src="images/calligraphy.jpg" alt="Traditional calligraphy on paper">
+      <span class="service-label">Traditional Calligraphy</span>
+    </a>
 
-  <a href="portfolio.html" class="service-card">
-    <img src="images/onsite.jpg" alt="Live Events">
-    <span class="service-label">Live Events</span>
-  </a>
+    <a href="portfolio.html" class="service-card">
+      <img src="images/engrave.jpg" alt="Hand-engraved wine bottle">
+      <span class="service-label">Engraving</span>
+    </a>
+
+    <a href="portfolio.html" class="service-card">
+      <img src="images/onsite.jpg" alt="Live on-site calligraphy personalization at an event">
+      <span class="service-label">Live Events</span>
+    </a>
 </section>
 
 
@@ -81,7 +91,7 @@
             I'm a Dallas native and a proud Longhorn (Hook&nbsp;’Em!), and I don’t believe in one-size-fits-all events.
           </p>
           <p>
-            Creating by hand is one of the most meaningful ways to connect with people, and I bring that approach to every project, crafting details that feel personal, intentional, and memorable. 
+            Creating by hand is one of the most meaningful ways to connect with people, and I bring that approach to every project, crafting details that feel personal, intentional, and unforgettable. 
             Whether working live at a brand activation or a special celebration, I love connecting with guests and bringing each piece to life right before their eyes. 
           </p>
 
