--- a/site/success.html
+++ b/site/success.html
@@ -32,7 +32,7 @@
         I will be in touch within 1–2 business days.
       </p>
 
-      <a href="/" class="book-button" style="margin-top: 2rem;">
+      <a href="/" class="book-button book-button--secondary">
         Return to Home
       </a>
     </div>
