--- a/site/index.html
+++ b/site/index.html
@@ -14,6 +14,9 @@
   <!-- Google Search Console verification -->
    <meta name="google-site-verification" content="1fzGvNzLG1R9qKHq1SHBnnEshpcOCFXFpqj0DUdaP8A" />
 
+  <link rel="icon" href="/favicon.png" type="image/png">
+
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
