SEO and Favicon update

--- a/site/contact.html
+++ b/site/contact.html
@@ -4,7 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="/favicon.png" type="image/png">
-  <title>Contact | Cherished Calligraphy</title>
+  <title>Inquire About Calligraphy Services | Dallas Calligrapher</title>
+
+  <meta
+    name="description"
+    content="Inquire about luxury calligraphy and engraving services for events, brands, and corporate gifting. Based in Dallas and available nationwide."
+  />
+
+  <link rel="canonical" href="https://www.cherishedcalligraphy.com/contact.html">
+
+  <link rel="icon" href="/favicon.png" type="image/png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
