--- a/site/services.html
+++ b/site/services.html
@@ -5,7 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="/favicon.png" type="image/png">
 
-  <title>Cherished Calligraphy | Services</title>
+  <title>Luxury Calligraphy & Engraving Services | Dallas Calligrapher</title>
+
+    <meta
+    name="description"
+    content="Luxury calligraphy and live engraving services for events, brands, and hospitality. Custom hand lettering for weddings, corporate gifting, and experiential events."
+  />
+
+  <link rel="canonical" href="https://www.cherishedcalligraphy.com/services.html">
+
+  <link rel="icon" href="/favicon.png" type="image/png">
+
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,7 +48,7 @@
 
         <p class="service-caption">
           Thoughtfully crafted calligraphy created in my studio for weddings,
-          events, and personal keepsakes. Ideal for place cards, signage, vows,
+          events, and personal keepsakes. Ideal for place cards, vows,
           envelopes, and custom lettering projects designed to feel cohesive
           and intentional.
         </p>
