--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -4,7 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="/favicon.png" type="image/png">
-  <title>Cherished Calligraphy | Portfolio</title>
+  <title>Calligraphy & Engraving Portfolio | Cherished Calligraphy</title>
+
+  <meta
+    name="description"
+    content="A curated portfolio of luxury calligraphy and engraving work for events, brands, and hospitality."
+  />
+
+  <link rel="canonical" href="https://www.cherishedcalligraphy.com/portfolio.html">
+
+  <link rel="icon" href="/favicon.png" type="image/png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
