photo rename, portfolio update, add Heat Foiling to Services

--- a/site/index.html
+++ b/site/index.html
@@ -52,8 +52,8 @@
     </a>
 
     <a href="portfolio.html" class="service-card">
-      <img src="images/onsite.jpg" alt="Live on-site calligraphy personalization at an event">
-      <span class="service-label">Live Events</span>
+      <img src="images/gold-foiled-luggage-tag.jpg" alt="Gold-foiled luggage tag">
+      <span class="service-label">Heat Foiling</span>
     </a>
 </section>
 
