--- a/site/portfolio.html
+++ b/site/portfolio.html
@@ -36,15 +36,15 @@
     <div class="portfolio-container">
 
       <div class="portfolio-grid">
-        <img src="images/p1.jpg" alt="Hand-lettered place card" loading="lazy">
-        <img src="images/p2.jpg" alt="Engraved glassware detail" loading="lazy">
-        <img src="images/p3.jpg" alt="Modern calligraphy on paper" loading="lazy">
-        <img src="images/p4.jpg" alt="Personalized event stationery" loading="lazy">
-        <img src="images/p5.jpg" alt="Luxury calligraphy detail shot" loading="lazy">
-        <img src="images/p6.jpg" alt="Hand-lettered name card" loading="lazy">
-        <img src="images/p7.jpg" alt="Perfume bottle" loading="lazy">
-        <img src="images/p8.jpg" alt="Wine bottle" loading="lazy">
-        <img src="images/p9.jpg" alt="Engraved perfume" loading="lazy">
+        <img src="images/hand-written-note.jpg" alt="Hand-lettered note" loading="lazy">
+        <img src="images/ornament.jpg" alt="Hand-lettered ornament" loading="lazy">
+        <img src="images/wine-glass.jpg" alt="Engraved wine glasses" loading="lazy">
+        <img src="images/brown-placecards.jpg" alt="Brown placecards" loading="lazy">
+        <img src="images/engraved-wine-bottle.jpg" alt="Engraved wine bottle" loading="lazy">
+        <img src="images/red-placecards.jpg" alt="Red placecards" loading="lazy">
+        <img src="images/valentines-calligraphy.jpg" alt="Hand-written Valentine's note" loading="lazy">
+        <img src="images/heat-foiled-padfolio.jpg" alt="Heat foiled leather padfolio" loading="lazy">
+        <img src="images/engraved-perfume.jpg" alt="Engraved perfume" loading="lazy">
         <img src="images/p10.jpg" alt="Engraved perfume" loading="lazy">
         <img src="images/p11.jpg" alt="Engraved perfume" loading="lazy">
         <img src="images/p12.jpg" alt="Engraved perfume" loading="lazy">
